# chirpmunk-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  REPORT.md  SPEC.md
apps/chirpmunk-scan/: Cargo.toml
apps/chirpmunk-scan/src/: main.rs
apps/chirpmunk-trx/: Cargo.toml  config-iio.toml  config.example.toml
apps/chirpmunk-trx/src/: main.rs
apps/chirpmunk-trx/tests/: daemon_loopback.rs
crates/chirpmunk-blocks/: Cargo.toml
crates/chirpmunk-blocks/src/: cad.rs  dedup.rs  frame_sink.rs  iio_direct.rs  lib.rs  multi_bw.rs  multi_sf.rs  soapy_direct.rs  tx_dispatch.rs
crates/chirpmunk-blocks/tests/: dedup_window.rs  iq_replay.rs  loopback.rs  lora_tx_dispatch.rs  multi_sf_loopback.rs  python_parity_loopback.rs
crates/chirpmunk-cbor/: Cargo.toml
crates/chirpmunk-cbor/src/: frame.rs  lib.rs  subscribe.rs  tx.rs
crates/chirpmunk-config/: Cargo.toml
crates/chirpmunk-config/src/: lib.rs
crates/chirpmunk-config/tests/: config_pluto.rs  diversity_fields.rs  spectrum_section.rs
crates/chirpmunk-config/tests/fixtures/: config-pluto.toml
crates/chirpmunk-phy/: Cargo.toml
crates/chirpmunk-phy/src/: decoder.rs  frame_sync.rs  header_decoder.rs  lib.rs  transmitter.rs
crates/chirpmunk-udp/: Cargo.toml
crates/chirpmunk-udp/src/: lib.rs
crates/chirpmunk-udp/tests/: python_parity.rs
crates/chirpmunk-ui/: Cargo.toml  README.md  index.html  tailwind.config.js
crates/chirpmunk-ui/.cargo/: config.toml
crates/chirpmunk-ui/src/: frontend.rs  lib.rs
docs/superpowers/plans/: 2026-05-08-diversity-rx-plan.md  2026-05-08-lbt-plan.md  2026-05-08-multi-bw-plan.md  2026-05-08-ui-prophecy-handoff.md  2026-05-08-ui-spectrum-plan.md
docs/superpowers/specs/: 2026-05-08-diversity-rx-design.md  2026-05-08-lbt-design.md  2026-05-08-multi-bw-design.md  2026-05-08-ui-spectrum-design.md
