# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "chirpmunk-trx"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "chirpmunk LoRa transceiver daemon."

[[bin]]
name = "chirpmunk-trx"
path = "src/main.rs"

[features]
default = ["soapy"]
soapy = ["chirpmunk-blocks/soapy"]
iio = ["chirpmunk-blocks/iio", "dep:seify", "seify/iio", "seify/dummy"]

[dependencies]
futuresdr.workspace = true
chirpmunk-blocks = { path = "../../crates/chirpmunk-blocks", default-features = false }
chirpmunk-cbor.workspace = true
chirpmunk-config.workspace = true
chirpmunk-phy.workspace = true
chirpmunk-udp.workspace = true
clap.workspace = true
seify = { path = "../../../seify", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "signal"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
serde_json = "1.0"
