# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "chirpmunk-cbor"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CBOR codecs for the chirpmunk wire protocol."

[dependencies]
minicbor.workspace = true
thiserror.workspace = true
