# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "chirpmunk-config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "TOML configuration loader for chirpmunk apps."

[dependencies]
toml.workspace = true
serde.workspace = true
thiserror.workspace = true
