# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "chirpmunk-udp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UDP fanout and client management for chirpmunk apps."

[dependencies]
chirpmunk-cbor.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
minicbor.workspace = true
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "process", "io-util"] }
