# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "chirpmunk-ui"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-only"
description = "WASM frontend for chirpmunk-trx — adopts FutureSDR's prophecy GUI as a library."

# Detached from the chirpmunk Cargo workspace: this crate builds via
# Trunk for the wasm32 target and uses prophecy + FutureSDR by path.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.7"
log = "0.4"
leptos = { version = "0.8", features = ["csr", "nightly"] }
prophecy = { path = "../../../FutureSDR/crates/prophecy" }
futuresdr = { path = "../../../FutureSDR" }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
